--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Nov 16 12:01:16 ICT 2023
-sdk.dir=C\:\\Users\\mspt\\AppData\\Local\\Android\\Sdk
+#Sat Nov 18 10:59:00 ICT 2023
+sdk.dir=/Users/apple/Library/Android/sdk
