[UI] Add Logo and Splash screen for app

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,8 @@
         android:fullBackupContent="@xml/backup_rules"
         android:label="@string/app_name"
         android:supportsRtl="true"
+        android:icon="@drawable/logo_app"
+        android:roundIcon="@drawable/logo_splash_screen"
         android:theme="@style/Theme.Lettripproject"
         tools:targetApi="31">
         <activity
