--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,6 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Mon Nov 27 10:24:35 ICT 2023
-sdk.dir=C\:\\Users\\Huoyly\\AppData\\Local\\Android\\Sdk
+#sdk.dir=C\:\\Users\\Huoyly\\AppData\\Local\\Android\\Sdk
+
+sdk.dir=/Users/apple/Library/Android/sdk
