--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:fullBackupContent="@xml/backup_rules"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:icon="@drawable/logo"
+        android:roundIcon="@drawable/logo__app"
         android:theme="@style/AppTheme"
         tools:targetApi="31">
 
